Feat/codeaction (#37)
* implemented action

* reduced compiling, updated readme

---------

Co-authored-by: Delice0 <59118341+Delice0@users.noreply.github.com>